--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="number-input">
         <label for="inputnumber">
-            Number here: <input type="number" id="inputnumber">
+            Number here: <input type="text" id="inputnumber" maxlength="9">
         </label>
         </div>
         <div class="numberoddoreven">
